colorer the divs heirachically

--- a/main.css
+++ b/main.css
@@ -13,6 +13,35 @@ header{
     background: gray;
 }
 
+header div {
+    float: left;
+}
+
+header .logo {
+    width: 15%;
+    border-right: 1px solid black;
+    height: 100%;
+}
+
+header .links {
+    width: 70%;
+    
+    height: 100%;
+}
+
+header .link {
+    width: 20%;
+    border-right: 1px solid black;
+    height: 100%;
+}
+
+header .search {
+    width: 15%;
+    height: 100%;
+}
+
+
+
 section{
     height: 72%;
     width: 100%;
@@ -21,22 +50,40 @@ section div{
     width: 50%;
     float: left;
     height: 100%;
-    background: red;
+    background: #484848;
+    border: 1px solid #000;
+}
+
+
+section div + div{
+    width: 50%;
+    float: left;
+    height: 100%;
+    background: #2d2c2c;
     border: 1px solid #000;
 }
 
 .text{
-    width: 10%;
+ 
+    text-align: center;
+    width: 30%;
     position: absolute;
-    top: 20%;
-    left: 50%;
+    top: 37%;
+    left: 35%;
 }
 .text p{
-    width: 100%;
-    background: white;
+    
+    margin-bottom: 0;
+    width: 80%;
+    background: black;
+    margin-left: 10%;
+    padding: .5em 0;
     } 
     
 .text span{
-    width: 80%;
-    background: white;
+    width: 33%;
+    
+    display: inline-block;
+    background: black;
+    padding: .5em 0;
 }
